Mechanical Sympathy